added icons-messengers,fixed: mobile menu,form,footer, paddings of sections

--- a/index-german.html
+++ b/index-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,21 +43,41 @@
         <nav class="nav">
           <ul class="list nav-list">
             <li><a href="#benefits" class="link link-header">Vorteile</a></li>
-            <li><a href="#our-customers" class="link link-header">Kunden</a></li>
-            <li><a href="#our-employees" class="link link-header">Mitarbeiter</a></li>
+            <li>
+              <a href="#our-customers" class="link link-header">Kunden</a>
+            </li>
+            <li>
+              <a href="#our-employees" class="link link-header">Mitarbeiter</a>
+            </li>
             <li><a href="#about-us" class="link link-header">Über uns</a></li>
           </ul>
         </nav>
 
         <ul class="list list-lang">
-          <li><a href="./index.html" class="link link-lang enabled">uk</a></li>
-          <li><a href="./index-german.html" class="link link-lang disabled">de</a></li>
+          <li>
+            <a
+              href="./index.html"
+              class="link link-lang enabled"
+              id="language-switch"
+              >uk</a
+            >
+          </li>
+          <li>
+            <a href="./index-german.html" class="link link-lang disabled">de</a>
+          </li>
         </ul>
         <a href="" class="link link-logo">Logo</a>
         <ul class="list list-communication">
-          <li><a href="tel:+1(111)-111-11-11" class="link link-communication">+43 660 2430111</a></li>
           <li>
-            <a href="mailto:info.autodienst.at@gmail.com" class="link link-communication">
+            <a href="tel:+1(111)-111-11-11" class="link link-communication"
+              >+43 660 2430111</a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:info.autodienst.at@gmail.com"
+              class="link link-communication"
+            >
               info.autodienst.at@gmail.com
             </a>
           </li>
@@ -76,9 +96,10 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
-           Mehr als ein Autoservice!
+            Mehr als ein Autoservice!
             <span class="after-title"
-              >Qualitätsausrüstung, Autoreparaturfachleute, individuelle Annäherung zu jedem Klienten.</span
+              >Qualitätsausrüstung, Autoreparaturfachleute, individuelle
+              Annäherung zu jedem Klienten.</span
             >
           </h1>
           <!-- <img
@@ -91,7 +112,7 @@
         </div>
       </section>
       <!-- ПЕРЕВАГИ Vorteile -->
-      <section class="benefits"  id="benefits">
+      <section class="benefits" id="benefits">
         <div class="container">
           <h2 class="title">Unsere Vorteile</h2>
           <ul class="list list-benefits">
@@ -105,7 +126,10 @@
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-               Professionalität des Unternehmens: Qualifizierte Spezialisten sind immer bereit, unseren Kunden qualitativ hochwertige Dienstleistungen mit einer Garantie zu bieten.   </p>
+                  Professionalität des Unternehmens: Qualifizierte Spezialisten
+                  sind immer bereit, unseren Kunden qualitativ hochwertige
+                  Dienstleistungen mit einer Garantie zu bieten.
+                </p>
               </div>
             </li>
             <li class="item-benefits">
@@ -118,7 +142,8 @@
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                                   Schnelle Unterstützung: Jeden Tag haben wir ein Kontaktcenter für die Beratung und Aufzeichnungen unserer Kunden.
+                  Schnelle Unterstützung: Jeden Tag haben wir ein Kontaktcenter
+                  für die Beratung und Aufzeichnungen unserer Kunden.
                 </p>
               </div>
             </li>
@@ -132,11 +157,14 @@
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                   Geschwindigkeit der Ausführung: Wir bemühen uns, den Prozess der Verbesserung Ihres Autos zu optimieren und bemühen sich, Dienstleistungen nicht nur qualitativ hochwertig, sondern auch schnell zu erbringen.
+                  Geschwindigkeit der Ausführung: Wir bemühen uns, den Prozess
+                  der Verbesserung Ihres Autos zu optimieren und bemühen sich,
+                  Dienstleistungen nicht nur qualitativ hochwertig, sondern auch
+                  schnell zu erbringen.
                 </p>
               </div>
             </li>
-             <li class="item-benefits">
+            <li class="item-benefits">
               <div class="img-text">
                 <img
                   src="./images/motorteil.jpg"
@@ -146,12 +174,17 @@
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                      Geschwindigkeit der Ausführung: Wir bemühen uns, den Prozess der Verbesserung Ihres Autos zu optimieren und bemühen sich, Dienstleistungen nicht nur qualitativ hochwertig, sondern auch schnell zu erbringen.            
+                  Geschwindigkeit der Ausführung: Wir bemühen uns, den Prozess
+                  der Verbesserung Ihres Autos zu optimieren und bemühen sich,
+                  Dienstleistungen nicht nur qualitativ hochwertig, sondern auch
+                  schnell zu erbringen.
                 </p>
               </div>
             </li>
           </ul>
-          <button type="button" class="button">Unsere Vorteile anklicken</button>
+          <button type="button" class="button">
+            Unsere Vorteile anklicken
+          </button>
         </div>
       </section>
       <!-- КЛІЄНТИ  KUNDEN-->
@@ -166,7 +199,7 @@
             <li class="customers-item">
               <p class="customers-quantity" data-target="20967">20967+</p>
               <h3 class="customers-subtitle">
-           Anzahl der reparierten Fahrzeuge
+                Anzahl der reparierten Fahrzeuge
               </h3>
             </li>
             <li class="customers-item">
@@ -176,7 +209,7 @@
             <li class="customers-item">
               <p class="customers-quantity" data-target="118">118+</p>
               <h3 class="customers-subtitle">
-              Anzahl der Kunden, die uns empfehlen
+                Anzahl der Kunden, die uns empfehlen
               </h3>
             </li>
           </ul>
@@ -196,7 +229,7 @@
                     class="img-employees"
                   />
                   <p class="text-employees">
-                      Reparatur von Fahrgestellen mit 10-er Erfahrung
+                    Reparatur von Fahrgestellen mit 10-er Erfahrung
                   </p>
                 </div>
               </div>
@@ -206,9 +239,10 @@
                     src="./images/Богдан-Степаненко.jpg"
                     alt="Mitarbeiter mit 7 Jahren Erfahrung"
                     class="img-employees"
-                                     />
+                  />
                   <p class="text-employees">
-                    Mechaniker mit 7 Jahren Erfahrung                </p>
+                    Mechaniker mit 7 Jahren Erfahrung
+                  </p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -217,19 +251,18 @@
                     src="./images/Антуан-Жекович.jpg"
                     alt="Mitarbeiter mit 6 Jahren Erfahrung"
                     class="img-employees"
-                                       />
+                  />
                   <p class="text-employees">
                     Lackierung der Karosserie für mehr als 6 Jahre
                   </p>
                 </div>
               </div>
-                         <div class="swiper-slide">
+              <div class="swiper-slide">
                 <div class="item-employees">
                   <img
                     src="./images/Павло-Денисюк.jpg"
                     alt="Mitarbeiter mit 8 Jahren Erfahrung"
                     class="img-employees"
-                     
                   />
                   <p class="text-employees">
                     Motorenreparatur mit 8 Jahren Erfahrung
@@ -242,7 +275,7 @@
                     src="./images//Назар-Коваль.jpg"
                     alt="Mitarbeiter mit 11 Jahren Erfahrung"
                     class="img-employees"
-                                       />
+                  />
                   <p class="text-employees">
                     Autoreparatur mit 11 Jahren Erfahrung
                   </p>
@@ -254,7 +287,7 @@
                     src="./images/Ігор-Пономар.jpg"
                     alt="Autoreparatur mit 12 Jahren Erfahrung"
                     class="img-employees"
-                                      />
+                  />
                   <p class="text-employees">
                     Motorenreparatur mit 12 Erfahrungen
                   </p>
@@ -262,7 +295,9 @@
               </div>
             </div>
           </div>
-          <button type="button" class="button">Button unsere Mitarbeiter</button>
+          <button type="button" class="button">
+            Button unsere Mitarbeiter
+          </button>
         </div>
       </section>
       <!-- ПРО НАС ÜBER UNS -->
@@ -270,26 +305,48 @@
         <div class="container">
           <h2 class="title">Über uns</h2>
           <p class="about-description">
-           Deteiling-Zentrum "name" - ein Marktführer im Bereich der Reparatur und Deteiling
-Dienstleistungen für Ihr Auto. Unsere Fachleute bieten detaillierte
-Beratung zur Autopflege und Beseitigung von Ästhetik
-Nachteile. Erfahrene Handwerker helfen, die technische und visuelle Komponente der Autos unserer Kunden in ausgezeichnetem Zustand zu halten, nicht nur
-extern, aber auch intern. Warum sollten wir uns für unser Studio entscheiden? Wir
-wir glauben an Qualitätspflege für Ihr Auto! Leidenschaft für Autos ist für uns nicht nur ein Job, sondern eine echte Leidenschaft, so sind wir perfekt
-Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist unsere Priorität und dank des Terminsystems erhalten Sie Ihr Auto immer pünktlich. Wir achten auf jedes Detail, geben alles zu 110% und tun alles, damit Ihr Auto perfekt aussieht.  </p>
-          <p class="text-head">
-                      Kontakt des Managers:
-            <a href="mailto:@serhii_khrystoiev" class="link-head"
-              >@serhii_khrystoiev</a
-            >
+            Deteiling-Zentrum "name" - ein Marktführer im Bereich der Reparatur
+            und Deteiling Dienstleistungen für Ihr Auto. Unsere Fachleute bieten
+            detaillierte Beratung zur Autopflege und Beseitigung von Ästhetik
+            Nachteile. Erfahrene Handwerker helfen, die technische und visuelle
+            Komponente der Autos unserer Kunden in ausgezeichnetem Zustand zu
+            halten, nicht nur extern, aber auch intern. Warum sollten wir uns
+            für unser Studio entscheiden? Wir wir glauben an Qualitätspflege für
+            Ihr Auto! Leidenschaft für Autos ist für uns nicht nur ein Job,
+            sondern eine echte Leidenschaft, so sind wir perfekt Wir wissen, wie
+            man den besten Service bietet. Die Einhaltung von Fristen ist unsere
+            Priorität und dank des Terminsystems erhalten Sie Ihr Auto immer
+            pünktlich. Wir achten auf jedes Detail, geben alles zu 110% und tun
+            alles, damit Ihr Auto perfekt aussieht.
           </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9069.92965709535!2d15.636396056784774!3d47.084679699316936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476e4de1c5801353%3A0x8f5b923241e76921!2zODIwMCBMYcOfbml0enRoYWwsINCQ0LLRgdGC0YDRltGP!5e1!3m2!1suk!2snl!4v1731371089304!5m2!1suk!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <p class="text-map">Laßnitzthal 301, 8200 Gleisdorf OT Laßnitzthal, Австрия</p>
-      </div>
+          <p class="text-head">
+            Kontakt des Managers:
+            <a href="mailto:info.autodienst.at@gmail.com" class="link-head"
+              >info.autodienst.at@gmail.com
+            </a>
+          </p>
+          <p class="text-head">
+            Telefonnummer:
+            <a href="tel:+436602430111" class="link-head">+43 660 2430111</a>
+          </p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9069.92965709535!2d15.636396056784774!3d47.084679699316936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476e4de1c5801353%3A0x8f5b923241e76921!2zODIwMCBMYcOfbml0enRoYWwsINCQ0LLRgdGC0YDRltGP!5e1!3m2!1suk!2snl!4v1731371089304!5m2!1suk!2snl"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <p class="text-map">
+            Laßnitzthal 301, 8200 Gleisdorf OT Laßnitzthal, Austria
+          </p>
+        </div>
       </section>
       <!-- ФОРМА  Formular-->
       <section class="connection-form">
         <div class="container">
+          <h2 class="title visually-hidden">Kommunikationsform</h2>
           <form class="personal-data" autocomplete="on" name="connection_form">
             <strong class="title title-form"
               >Haben Sie Fragen? Hinterlassen Sie Ihre Daten</strong
@@ -316,19 +373,76 @@ Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist un
                 pattern="^\+43\(\d{3}\)\d{3}-\d{4}$"
                 class="form-input"
             /></label>
+            <label class="form-policy">
+              <input
+                type="checkbox"
+                name="policy"
+                class="form-checkbox"
+                required
+              />
+              <a href="./politic-confidential.html" class="index-confidential"
+                >Datenschutzerklärung.</a
+              >
+              <a href="./offer-agreement.html" class="index-confidential"
+                >Angebotsvereinbarung</a
+              >
+            </label>
             <button type="submit" class="button button-form">Senden</button>
           </form>
         </div>
       </section>
+      <!-- МЕСЕНДЖЕРИ Boten -->
+      <section class="messengers">
+        <div class="container">
+          <h2 class="title visually-hidden">Boten</h2>
+          <ul class="list list-messengers">
+            <li class="item-messengers">
+              <a
+                href="https://t.me/serhii_khrystoiev"
+                class="link-messengers"
+                aria-label="Link to telegramm"
+                target="_blank"
+                rel="no-referrer noopener nofollow"
+              >
+                <svg class="icon-messengers">
+                  <use href="./images/sprite.svg#telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-messengers">
+              <a
+                href="viber://add?number=+380665809263"
+                class="link-messengers"
+                aria-label="Hinweis auf viber"
+                target="_blank"
+                rel="no-referrer noopener nofollow"
+              >
+                <svg class="icon-messengers">
+                  <use href="./images/sprite.svg#viber"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-messengers">
+              <a
+                href="https://wa.me/380665809263"
+                class="link-messengers"
+                aria-label="Link zu vatsap"
+                target="_blank"
+                rel="no-referrer noopener nofollow"
+              >
+                <svg class="icon-messengers">
+                  <use href="./images/sprite.svg#watsapp"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
         <a href="" class="link link-logo logo-footer">Logo</a>
-        <p class="copyright">
-        &#169;Alle Rechte vorbehalten.
-          <a href="./politic-confidential-german.html" class="index-confidential">Datenschutzerklärung</a>
-        <a href="./Angebotsvereinbarung.html" class="index-confidential">Angebotsvereinbarung</a>
-        </p>
+        <p class="copyright">&#169;Alle Rechte vorbehalten.</p>
       </div>
     </footer>
     <!-- МОБІЛЬНЕ МЕНЮ  MOBILE MENÜ -->
@@ -338,26 +452,26 @@ Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist un
           <use href="./images/sprite.svg#mobile-close"></use>
         </svg>
       </button>
-
       <ul class="mobile-menu">
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Vorteile</a>
+          <a href="#benefits" class="link mobile-menu-link">Vorteile</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Unsere Kunden</a>
+          <a href="#our-customers" class="link mobile-menu-link"
+            >Unsere Kunden</a
+          >
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Unsere Mitarbeiter</a>
+          <a href="#our-employees" class="link mobile-menu-link"
+            >Unsere Mitarbeiter</a
+          >
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Über uns</a>
-        </li>
-        <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Kontaktdaten</a>
+          <a href="#about-us" class="link mobile-menu-link">Über uns</a>
         </li>
       </ul>
     </div>
-      <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
@@ -365,15 +479,32 @@ Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist un
     ></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/jquery.inputmask.min.js"></script> <script>
+    <script src="./js/jquery.inputmask.min.js"></script>
+    <script>
       $(document).ready(function () {
         $('input[name="tel"]').inputmask("+43(999)999-99-99");
       });
     </script>
-
-        <script src="./js/our-customers.js"></script>
-        <script src="./js/benefits.js"></script>
+    <script src="./js/our-customers.js"></script>
+    <script src="./js/benefits.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
-    </body>
+    <script>
+      // Збереження позиції прокрутки перед зміною мови
+      document
+        .getElementById("language-switch")
+        .addEventListener("click", function () {
+          localStorage.setItem("scrollPosition", window.scrollY);
+          window.location.reload();
+        });
+
+      window.addEventListener("load", function () {
+        const savedPosition = localStorage.getItem("scrollPosition");
+        if (savedPosition !== null) {
+          window.scrollTo(0, parseInt(savedPosition));
+          localStorage.removeItem("scrollPosition");
+        }
+      });
+    </script>
+  </body>
 </html>
