resized iframe, fixed links of language

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </nav>
 
         <ul class="list list-lang">
-          <li><a href="" class="link link-lang disabled">uk</a></li>
+          <li><a href="" class="link link-lang disabled ukrainian">Ukrainian</a></li>
           <li>
             <a
               href="./index-german.html"
-              class="link link-lang enabled"
+              class="link link-lang enabled german"
               id="language-switch"
-              >de</a
+              >German</a
             >
           </li>
         </ul>
@@ -333,9 +333,7 @@
           </p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4319.956089142808!2d34.5343829!3d49.5613437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82f10b37cc43b%3A0xd5cb71d39ddc76c2!2z0LLRg9C70LjRhtGPINCa0LDQs9Cw0LzQu9C40LrQsCwgNzYsINCf0L7Qu9GC0LDQstCwLCDQn9C-0LvRgtCw0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwg0KPQutGA0LDRl9C90LAsIDM2MDAw!5e1!3m2!1suk!2snl!4v1731370564006!5m2!1suk!2snl"
-            width="600"
-            height="450"
-            style="border: 0"
+                               style="border: 0"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
