--- a/index-german.html
+++ b/index-german.html
@@ -57,13 +57,13 @@
           <li>
             <a
               href="./index.html"
-              class="link link-lang enabled"
+              class="link link-lang enabled ukrainian"
               id="language-switch"
-              >uk</a
+              >Ukrainian</a
             >
           </li>
           <li>
-            <a href="./index-german.html" class="link link-lang disabled">de</a>
+            <a href="" class="link link-lang disabled german">German</a>
           </li>
         </ul>
         <a href="" class="link link-logo">Logo</a>
@@ -470,6 +470,21 @@
           <a href="#about-us" class="link mobile-menu-link">Über uns</a>
         </li>
       </ul>
+        <ul class="list list-mob-communication">
+          <li>
+            <a href="tel:+1(111)-111-11-11" class="link link-mob-communication"
+              >+43 660 2430111</a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:info.autodienst.at@gmail.com"
+              class="link link-mob-communication"
+            >
+              info.autodienst.at@gmail.com
+            </a>
+          </li>
+        </ul>
     </div>
     <script
       defer
@@ -487,11 +502,11 @@
     </script>
     <script src="./js/our-customers.js"></script>
     <script src="./js/benefits.js"></script>
+    <script src="./js/switch-language.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
     <script>
-      // Збереження позиції прокрутки перед зміною мови
-      document
+            document
         .getElementById("language-switch")
         .addEventListener("click", function () {
           localStorage.setItem("scrollPosition", window.scrollY);
