--- a/index.html
+++ b/index.html
@@ -341,13 +341,14 @@
             Номер телефону:
             <a href="tel:+380665809263" class="link-head">+380665809263</a>
           </p>
-          <iframe
+      <div class="wrapper-iframe">
+            <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4319.956089142808!2d34.5343829!3d49.5613437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82f10b37cc43b%3A0xd5cb71d39ddc76c2!2z0LLRg9C70LjRhtGPINCa0LDQs9Cw0LzQu9C40LrQsCwgNzYsINCf0L7Qu9GC0LDQstCwLCDQn9C-0LvRgtCw0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwg0KPQutGA0LDRl9C90LAsIDM2MDAw!5e1!3m2!1suk!2snl!4v1731370564006!5m2!1suk!2snl"
-            style="border: 0"
-            allowfullscreen=""
+                       allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
+      </div>
           <p class="text-map">Полтава, вул. Кагамлика 76А</p>
         </div>
       </section>
