fixed placeholder and pattern

--- a/index-german.html
+++ b/index-german.html
@@ -322,7 +322,7 @@
             alles, damit Ihr Auto perfekt aussieht.
           </p>
           <p class="text-head">
-            Kontakt des Managers:
+            Kontakt:
             <a href="mailto:info.autodienst.at@gmail.com" class="link-head"
               >info.autodienst.at@gmail.com
             </a>
@@ -370,8 +370,8 @@
                 type="tel"
                 name="tel"
                 required
-                placeholder="+43(___)___-____"
-                pattern="^\+43\(\d{3}\)\d{3}-\d{4}$"
+           placeholder="+43(___)___-__-__"
+                 pattern="^\+43\(\d{3}\)\d{3}-\d{2}-\d{2}$"
                 class="form-input"
             /></label>
             <label class="form-policy">
